--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/leaflet": "^1.9.17",
     "@types/react": "19.0.12",
     "@types/react-dom": "^19.0.4",
@@ -29,7 +30,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.0.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.3"
   }
