--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@tremor-watch/shared": "workspace:*",
     "@tremor/react": "^3.18.7",
     "axios": "^1.8.4",
     "leaflet": "^1.9.4",
