chore: update .gitignore and turbo.json for improved build configuration and task management

--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,10 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "build/**"]
+      "outputs": ["dist/**"]
+    },
+    "check-types": {
+      "dependsOn": ["^check-types"]
     },
     "lint": {
       "outputs": []
