--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,13 @@
     "@tremor-watch/shared": "workspace:*",
     "@tremor/react": "^3.18.7",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@tailwindcss/vite": "^4.0.17",
     "@types/leaflet": "^1.9.17",
     "@types/react": "19.0.12",
@@ -28,10 +30,13 @@
     "@typescript-eslint/parser": "^8.28.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.28.0",
     "vite": "^6.2.3"
   }
 }
