--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier": "^3.2.5",
     "turbo": "^2.4.4"
   },
-  "packageManager": "pnpm@10.7.0"
+  "packageManager": "pnpm@10.7.0",
+  "dependencies": {
+    "react-hot-toast": "^2.5.2"
+  }
 }
