--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.9",
+    "jsdom": "^26.0.0",
     "prettier": "^3.2.5",
-    "turbo": "^2.4.4"
+    "turbo": "^2.4.4",
+    "vitest": "^3.0.9"
   },
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
