--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/ui": "^3.0.9",
+    "@vitest/ui": "^3.1.1",
     "jsdom": "^26.0.0",
     "prettier": "^3.2.5",
     "turbo": "^2.4.4",
-    "vitest": "^3.0.9"
+    "vitest": "^3.1.1"
   },
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
-    "@types/react-datepicker": "^7.0.0",
+    "@vitest/coverage-v8": "^3.1.1",
     "react-datepicker": "^8.2.1",
     "react-hot-toast": "^2.5.2"
   }
