--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run tests
-        run: npx vitest run --coverage
+        run: cd apps/web && npx vitest run --coverage
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
