--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-query": "^5.71.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
