--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.1.1",
+    "clsx": "^2.1.1",
     "jsdom": "^26.0.0",
     "prettier": "^3.2.5",
     "turbo": "^2.4.4",
